WiFi: Update blobs from MIUI12 Beta for Pyxis

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -79,7 +79,7 @@ EseEnabled=0
 
 ImplicitQosIsEnabled=0
 
-gNeighborLookupThreshold=85
+gNeighborLookupThreshold=76
 gNeighborScanChannelMinTime=20
 gNeighborScanChannelMaxTime=30
 gMaxNeighborReqTries=3
@@ -125,7 +125,6 @@ BandCapability=0
 
 #Channel Bonding
 gChannelBondingMode5GHz=1
-gChannelBondingMode24GHz=1
 
 #Say gGoKeepAlivePeriod(5 seconds) and gGoLinkMonitorPeriod(10 seconds).
 #For every 10 seconds DUT send Qos Null frame(i.e., Keep Alive frame if link
@@ -239,7 +238,7 @@ gMaxMediumTime = 6000
 gRrmEnable=1
 
 #Enable Power Save offload
-gEnablePowerSaveOffload=4
+gEnablePowerSaveOffload=1
 
 #Enable firmware uart print
 gEnablefwprint=0
@@ -274,6 +273,10 @@ gEnableMCCAdaptiveScheduler=1
 
 #Enable or Disable p2p device address administered
 isP2pDeviceAddrAdministrated=0
+
+# Set Thermal Power limit
+TxPower2g=10
+TxPower5g=10
 
 # Remove Overlap channel restriction
 gEnableOverLapCh=0
@@ -593,27 +596,14 @@ gcmp_enabled=0
 
 gTxBFCsnValue=4
 
-gActiveUcBpfMode=1
-gActiveMcBcBpfMode=1
+#Configures Channel Bonding in 24 GHz
+gChannelBondingMode24GHz=1
 
 #Enable ETSI SRD channels in master mode PCL and ACS functionality
 etsi13_srd_chan_in_master_mode=1
 
 # Disable wpa3 on 7150 device
 sae_enabled=0
-
-# Set IPA low/med/high bandwidth mbps
-gIPALowBandwidthMbps=100
-gIPAMediumBandwidthMbps=400
-gIPAHighBandwidthMbps=800
-
-# Enable/Disable force bandwidth voting during IPA suspend
-gIPAForceVotingEnable=1
-
-# TheCrazyLex@PA Prefer connecting to 5Ghz AP
-# even if its RSSI is lower by 3dBm than the 2.4Ghz AP
-gRoamPrefer5GHz=1
-gSelect5GHzMargin=3
 
 END
 
